--- a/main.ipynb
+++ b/main.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "31c7f4c8",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
    "source": [
     "#using sklearn kmeans to cluster data and find cluster center(means)\n",
     "\n",
-    "k_means= KMeans(n_clusters=num_colors)   #finding n_clusters by trial and error\n",
+    "k_means= KMeans(n_clusters=num_colors)\n",
     "k_means.fit(pixels)\n",
     "print(k_means.cluster_centers_)"
    ]
