--- a/main.ipynb
+++ b/main.ipynb
@@ -233,6 +233,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1a5c76f",
+   "metadata": {},
+   "source": [
+    "## not using whitened colors, as it is giving undesired result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "31c7f4c8",
@@ -250,7 +258,11 @@
    "source": [
     "#using sklearn kmeans to cluster data and find cluster center(means)\n",
     "\n",
-    "k_means= KMeans(n_clusters=num_colors)\n",
+    "k_means= KMeans(n_clusters=num_colors)   #finding n_clusters by trial and error\n",
+    "\n",
+    "# scaled_pixels = np.array(list(zip(scaled_red, scaled_green, scaled_blue)))\n",
+    "# k_means.fit(scaled_pixels)\n",
+    "\n",
     "k_means.fit(pixels)\n",
     "print(k_means.cluster_centers_)"
    ]
